# refdes-agilex5

./: README.md
axe5000/accel_temp_refdes/: axe5000_top.qpf  axe5000_top.qsf  demo.hex  niosv_system.qsys  pwm8x3_hw.tcl
axe5000/accel_temp_refdes/ip/custom_pwm/: cust_PwmCSR.vhd  cust_PwmDataMux.vhd  cust_PwmRegisters.vhd  cust_pwm.vhd  custom_pwm8x3_hw.tcl  custom_pwm_generation.rpt  custom_pwm_hw.tcl  serv_req_info.txt
axe5000/accel_temp_refdes/ip/niosv_system/: accel_i2c.ip  accel_irq.ip  dip_sw.ip  interval_2s_timer.ip  iopll.ip  jtag_master.ip  jtag_uart.ip  lw_uart.ip  niosv_m_0.ip  niosv_system_clock_in.ip  onchip_memory.ip  pb.ip  pwm8x3.ip  reset_bridge.ip  reset_release.ip  sdm_mailbox_client.ip  sys_id.ip  sysclk_bridge.ip
axe5000/accel_temp_refdes/scripts/: scripts.txt
axe5000/accel_temp_refdes/software/app/: axe5000_demo_refdes.c
axe5000/accel_temp_refdes/software/demo_app/: CMakeLists.txt  axe5000_demo_refdes.c
axe5000/accel_temp_refdes/software/demo_bsp/: settings.bsp
axe5000/accel_temp_refdes/sources/: axe5000_pin_assignment.tcl  axe5000_top.sdc  axe5000_top.v
axe5000/first_agilex5_refdes/: axe5000_top.qpf  axe5000_top.qsf
axe5000/first_agilex5_refdes/ip/: PLL.ip  counter.ip  rrip.ip
axe5000/first_agilex5_refdes/sources/: axe5000_pin_assignment.tcl  axe5000_top.sdc  axe5000_top.v
axe5000/first_niosv_refdes/: NIOSV_lab.qsys  axe5000_top.qpf  axe5000_top.qsf
axe5000/first_niosv_refdes/ip/NIOSV_lab/: NIOSV_lab_clock_in.ip  NIOSV_lab_iopll_0.ip  NIOSV_lab_reset_in.ip  jtag_uart.ip  niosv_m.ip  onchip_memory.ip  reset_release.ip  sysid.ip
axe5000/first_niosv_refdes/software/.metadata/: version.ini
axe5000/first_niosv_refdes/software/app/: CMakeLists.txt  HelloWorld.c
axe5000/first_niosv_refdes/software/bsp/: settings.bsp
axe5000/first_niosv_refdes/sources/: axe5000_pin_assignment.tcl  axe5000_top.v
axe5000/niosv_qspi_hyperram_refdes/: axe5000.pfg  axe5000_top.qpf  axe5000_top.qsf  build_scripts.txt  clock_subsystem.qsys  niosv_system.qsys  top_system.qsys
axe5000/niosv_qspi_hyperram_refdes/ip/clock_subsystem/: clock_subsystem_clock_in.ip  clock_subsystem_intel_vip_reset_sync_block_0.ip  clock_subsystem_intel_vvp_reset_extend_0.ip  clock_subsystem_iopll_1.ip  clock_subsystem_mem_reset_handler_0.ip  reset_release.ip
axe5000/niosv_qspi_hyperram_refdes/sources/: axe5000_niosv_top.v  axe5000_pin_assignment.tcl  axe5000_top.tcl
axe5_eagle/first_agilex5_refdes/: axe5_eagle_top.qpf  axe5_eagle_top.qsf  rrip.ip
axe5_eagle/first_agilex5_refdes/sources/: axe5_eagle_pin_assignment.tcl  axe5_eagle_top.sdc  axe5_eagle_top.v
axe5_eagle/mipi_hdmi_mira220/: axe5_eagle_mipi_hdmi.qpf  axe5_eagle_mipi_hdmi.qsf  hdmi_system.qsys  mipi_system.qsys  niosv_system.qsys
axe5_eagle/mipi_hdmi_mira220/sources/: axe5_eagle_mipi_hdmi.sdc  axe5_eagle_mipi_hdmi.v  axe5_eagle_mipi_hdmi_pin.tcl
scripts/: fit_kernel_agilex5.its  uboot.txt
(+81 files in other folders)
